--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SteelCalc Pro - Sistema Completo de Orçamento de Galpões</title>
+    <title>Galpões - Sistema Completo de Orçamento de Galpões</title>
     <style>
         :root { 
             --primary: #1f2d3d; 
@@ -605,7 +605,7 @@
 
 <div class="header">
     <div class="header-content">
-        <div class="logo">⚙️ SteelCalc Pro</div>
+        <div class="logo">⚙️ Galpões</div>
         <div class="header-actions">
             <button onclick="abrirModalCliente()">👤 Dados do Cliente</button>
             <button onclick="abrirModalOrcamentos()">📁 Orçamentos Salvos</button>
